# Kleborate

./: .coveragerc  .gitignore  .gitmodules  Kleborate.py  Kleborate_results.txt  MANIFEST.in  README.md  clusterBLAST.py  kleborate-runner.py  meta.yaml  mlstBLAST.py  pyproject.toml  readthedocs.yaml  requirements.txt  resBLAST.py  setup.py  test.sh
NCBI_download/: README.md  ncbi_klebs_pathogen_downloader.py
NCBI_results/: README.md  ncbi_genome_kleborate_results
data/: ARGannot.r1.fasta  ARGannot.r1.fasta.nhr  ARGannot.r1.fasta.nin  ARGannot.r1.fasta.nsq  ARGannot_clustered80.csv  CbST_profiles.txt  ICEKp1.embl  ICEKp11.embl  ICEKp14.embl  ICEKp3.embl  ICEKp4.embl  ICEKp6.embl  ICEKp7.embl  ICEKp8.embl  Klebsiella_pneumoniae.fasta  Klebsiella_pneumoniae.fasta.nin  QRDR_120.aa  QRDR_120.aa.pin  QRDR_120.aa.psq  README.md  UK-IRE-MDR_Lam2017.txt  YbST_profiles.txt  ncbi_genome_kleborate_results.txt  other_vir_clusters.fasta.nhr  other_vir_clusters.fasta.nin  other_vir_clusters.fasta.nsq  test.txt  wzi.fasta  wzi.txt  ybt_alleles.fasta.nhr  ybt_alleles.fasta.nin
kleborate/: Kleborate.py  __main__.py  blastn.py  clusterBLAST.py  contig_stats.py  help_formatter.py  kaptive.py  kleborate.py  misc.py  mlstBLAST.py  resBLAST.py  rmpA.py  settings.py  shv_mutations.py  species.py  truncation.py  version.py
scripts/: README.md  bla_info.py  getmlst.py  kleborate_to_microreact.py  make_argannot_csv.py  make_argannot_fasta.py  microreact.csv  microreact.nwk
test/: README.md  _test_genomes.py  test_alignment.py  test_contig_stats.py  test_genomes.py  test_iro.py  test_iro_1.fasta  test_iro_2.fasta  test_iro_4.fasta  test_kaptive.py  test_main.py  test_misc.py  test_mlst.py  (+17 more)
(+3531 files in other folders)
